# Mantis

./: README.md  RuninVSCode.txt  pyproject.toml  requirements.txt
.claude/: settings.local.json
mantis/: __init__.py  cli.py  config.py
mantis/api/: endpoint_scanner.py  schema_parser.py  tools.py
mantis/codereview/: context_builder.py  mode_aware_reviewer.py  preprocessor.py  scanner.py  tools.py  triage.py  verifier.py
mantis/core/: agent.py  ai_classifier.py  callback_server.py  events.py  knowledge.py  memory.py  oob_scanner.py  scan_modes.py  scope.py  token_tracker.py
mantis_pt.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
playbooks/: __index__.yaml  adcs_attacks.yaml  api_versioning.yaml  apollo_federation_exploits.yaml  asrep_roasting.yaml  aws_sts_confusion.yaml  azure_ad_token_theft.yaml  bfla.yaml  bleichenbacher.yaml  bloodhound_paths.yaml  bola.yaml  cache_poisoning.yaml  chunked_trailer_abuse.yaml  clickjacking.yaml  client_side_template_injection.yaml  cloudfront_origin_bypass.yaml  command_injection.yaml  cookie_tossing.yaml  cors.yaml  crlf_injection.yaml  csp_bypass.yaml  csrf.yaml  css_injection.yaml  deep_link_hijacking.yaml  django_orm_lookup_injection.yaml  dom_clobbering.yaml  dotnet_viewstate_deserialization.yaml  drown_attack.yaml  ecdsa_curve_confusion.yaml  email_injection_full.yaml  exposed_files.yaml  file_upload.yaml  gcm_nonce_reuse.yaml  gcp_sa_impersonation.yaml  graphql.yaml  graphql_advanced.yaml  grpc_reflection.yaml  hop_by_hop_smuggling.yaml  http2_continuation_flood.yaml  http2_smuggling.yaml  (+58 more)
(+23 files in other folders)
