[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mantis-pt"
version = "1.6.0"
description = "MANTIS — AI-Powered Penetration Testing Framework"
requires-python = ">=3.10"
dependencies = [
    "httpx[http2]>=0.27.0",
    "httpx-ntlm>=1.4.0",
    "cryptography>=42.0.0",
    "anthropic>=0.40.0",
    "aiosqlite>=0.20.0",
    "networkx>=3.2",
    "dnspython>=2.6.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=5.0.0",
    "jinja2>=3.1.0",
    "pyyaml>=6.0",
    "click>=8.1.0",
    "rich>=13.7.0",
    "python-dateutil>=2.9.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0.0", "pytest-asyncio>=0.23.0", "ruff>=0.5.0", "mypy>=1.10.0"]
semgrep = ["semgrep>=1.70.0"]

[project.scripts]
mantis = "mantis.cli:cli"

[tool.setuptools.packages.find]
where = ["."]
include = ["mantis*"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
